--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".PinCodeActivity"
+            android:name=".activity.PinCodeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,12 +30,12 @@
         </activity>
 
         <activity
-            android:name=".AddPasswordActivity"
+            android:name=".activity.AddPasswordActivity"
             android:label="Add Password Activity">
         </activity>
 
         <activity
-            android:name=".PasswordDetailsActivity"
+            android:name=".activity.PasswordDetailsActivity"
             android:label="Password Details Activity">
         </activity>
     </application>
